assets/www/css/course_widget.css
/* ... */
@media handheld, only screen and (max-width:720px){

.crswidg_qustns ul li {width: 225px}
.crswidg_drgans h1{font-size:20px}
.crswidg_drgbtn{width:86%;height: 300px;}
.crswidg_img ul li {margin-right: 0.48%; width:151px; height:276px}
.crswidg_popup {left: 15.3%; width: 71.8%; top:50%;}
.crswidg_overlyhldr {width:90%; margin:13px;}
.crswidg_qustns ul li.nodisp{ width:225px; }
.crswidg_drgbtn ul li{margin-right:0.9%}
.crswidg_qustns{width:675px}
.crswidg_img ul li img {width: 100%;}
.crswidg_img_small ul{width: auto;height: 275px;}

.crswidg_img ul li span.its-correct  img{
height:inherit;
}

.pro_container > li{ height: auto; overflow: hidden; }

.crswidg_img_small ul li{ width:120px; height:110px; margin-right:0.9%; font-size:13px;line-height: 17px; }
.crswidg_img_small ul li div { width:120px; height:110px; text-align:center; vertical-align:middle;}

.crswidg_drgbxtble_box {width:22%;height:115px;}
.crswidg_drgbxtble_small {width:22%;height:115px; }
.crswidg_drgbxtble_small a { font-size:13px; margin:4%;line-height: 17px;}
body > li.ui-draggable.sequence-item { width:120px; height:110px;font-size:13px;line-height: 17px;  }
body > li.ui-draggable.sequence-item a { font-size:13px; line-height: 17px;}
body > li.ui-draggable.sequence-item img{ width:120px; height:110px;}

}

@media handheld, only screen and (max-width:640px){

.crswidg_img ul li{width:149px; margin-right: 0.2%; height:257px}
.crswidg_lblbx {height:45px}
.crswidg_drgbtn ul li a, .pro_container > li a {width:/*111px*/100%;}
.crswidg_qustns ul li {width: 207px}
.crswidg_qustns ul li.nodisp{ width:207px; }
.crswidg_drgans{width:94%}

.crswidg_img ul li span.its-correct {top: 29%; width:33%}  
.crswidg_lblbx {height:45px}
.crswidg_qustns{width:621px}

.crswidg_img_small ul li{ width:110px; height:100px; margin-right:0.9%; font-size:13px;line-height: 17px; }
.crswidg_img_small ul li div { width:110px; height:100px; text-align:center; vertical-align:middle;}

.crswidg_drgbxtble_box {width:22%;height:110px;}
.crswidg_drgbxtble_small {width:22%;height:110px; }
.crswidg_drgbxtble_small a { font-size:13px; margin:4%;line-height: 17px;}
body > li.ui-draggable.sequence-item { width:110px; height:100px; font-size:13px;line-height: 17px; }
body > li.ui-draggable.sequence-item a { font-size:13px; line-height: 17px;}
body > li.ui-draggable.sequence-item img{ width:110px; height:100px;}
#content-webview video{ height: 102px;}
 .next_activity{ width: 8%; margin: 23% -2% 0 0; }
 .matchNxtActivity{ width: 4.5%; margin: 110% -2% 0 0; }
 .sequence_next_activity{ width: 5%; margin: -30% -2% 0 0%;}
 .previewImage{width: 100%; height: 137px;}
 .pro_container{ top:36px; margin-bottom: -8%;}
 .globalmenu ul li a span.commenticon{ background: url(../images/note_gray.png) no-repeat; width: 44px; height: 44px; display: inline-block; background-size: 80% 80%; }
   .AndroidVideo img{ height: 207px;width: 98%;}
   .crswidg_bg {padding:100px 0;}
    div.favCommentNotes{ display:none !important;}
    body .commentNotes{ display:none !important;}
}

@media handheld, only screen and (max-width:600px){

.crswidg_qustns ul li {width: 190px}
.crswidg_drgans h1{font-size:19px}
.crswidg_drgoptns ul li a{font-size:15px; font-weight:bold}
.crswidg_img ul li{width:131px; height:222px; margin-right:1.5%}
.crswidg_drgbtn ul li a, .pro_container > li a {height:77px; width: /*110px*/100%}
.crswidg_drgbtn ul li{margin-right:1.9%}
.crswidg_drgbtn {width: 91%}
.crswidg_lblbx p {font-size: 12px; line-height: 14px}
.crswidg_qustns ul li.nodisp{ width:190px; }
.crswidg_lblbx {height:35px}
.crswidg_qustns{width:570px}

.crswidg_img_small ul li{ width:100px; height:100px; margin-right:0.9%; font-size:12px;line-height: 15px; }
.crswidg_img_small ul li div { width:100px; height:100px; text-align:center; vertical-align:middle;}

.crswidg_drgbxtble_box {width:22%;height:105px;}
.crswidg_drgbxtble_small {width:22%;height:105px;  }
.crswidg_drgbxtble_small a { font-size:12px; margin:3%;line-height: 15px;}
body > li.ui-draggable.sequence-item { width:100px; height:100px;  font-size:12px;line-height: 15px;}
body > li.ui-draggable.sequence-item a { font-size:12px; line-height: 15px;}
body > li.ui-draggable.sequence-item img{ width:100px; height:100px;}
}
/* ... */

